<resources>
    <string name="colored_asterisk"><![CDATA[<font color=\'#D6001C\'>&#160;*</font>]]></string>
    <string name="label_asterisk">&#160;*</string>
    <string name="action_continue">Lanjut</string>
    <string name="action_back">Kembali</string>
    <string name="product_add_edit_preview">Informasi Produk</string>
    <string name="product_add_edit_detail">Detail Produk</string>
    <string name="label_title_add_product">Tambah Produk</string>
    <string name="label_title_edit_product">Ubah Produk</string>
    <string name="label_title_draft_product">Draft Produk</string>
    <string name="label_title_category_picker">Pilih Kategori</string>
    <string name="product_subtitle_product_information">Yuk, isi informasi produkmu</string>
    <string name="label_add_product_photo">Foto Produk</string>
    <string name="label_add_product_detail">Detail Produk</string>
    <string name="label_add_product_description">Deskripsi Produk</string>
    <string name="label_add_product_variant">Varian</string>
    <string name="label_add_product_shipment">Detail Pengiriman</string>
    <string name="label_edit_product_status">Status Produk</string>
    <string name="label_product_status_description">Jika status aktif, berarti produkmu\ndapat dicari pembeli</string>
    <string name="preview_label_add_product_photo_tips">Tips memilih foto produk yang benar</string>
    <string name="preview_label_add_product_variant_tips">Tips atur stok &amp; harga dengan fitur Varian</string>
    <string name="label_dialog_title_activate_variant_status">Aktifkan status produk?</string>
    <string name="label_dialog_desc_activate_variant_status_all_available">Status dari semua varian produk ini akan berubah menjadi aktif.</string>
    <string name="label_dialog_desc_activate_variant_status_all_empty">Stok produk kosong. Update stok dulu, ya.</string>
    <string name="label_dialog_desc_activate_variant_status_all_empty_mainapp">Stok produk kosong, ubah stok produk bervarian melalui Daftar Produk atau melalui Tokopedia Seller.</string>
    <string name="title_dialog_desc_activate_variant_status_all_empty_mainapp">Status produkmu tidak bisa diaktifkan</string>
    <string name="label_dialog_desc_activate_variant_status_partially_available">Status semua varian produk ini akan berubah menjadi aktif. Varian dengan stok 0 akan tetap tidak aktif.</string>
    <string name="label_coachmark_out_of_stock">Stok produkmu kosong. Update stok agar produkmu bisa dicari pembeli, ya.</string>
    <string name="action_start">Mulai</string>
    <string name="action_change">Ubah</string>
    <string name="action_add">Tambah</string>
    <string name="action_save">Simpan</string>
    <string name="action_learn">Pelajari Selengkapnya</string>
    <string name="action_oke">Oke</string>
    <string name="action_activate_variant_status">Ya, Aktifkan</string>
    <string name="action_activate_variant_status_stock_empty">Update Stok</string>
    <string name="action_cancel_activate_variant_status">Batal</string>
    <string name="error_weight_not_filled">Isi detail pengiriman dulu, ya.</string>
    <string name="add_product_photo_header">Foto Produk</string>
    <string name="label_primary">Utama</string>
    <string name="action_add_product_photo">Tambah Foto</string>
    <string name="action_pick_photo">Pilih Foto</string>
    <string name="action_edit_photo">Ubah Foto</string>
    <string name="error_max_product_photo">Hapus salah satu untuk bisa tambah foto</string>
    <string name="add_product_name_header">Isi nama produk yang kamu jual</string>
    <string name="detail_label_product_name">Nama produk</string>
    <string name="label_add_product_name_tips">Tips: Jenis Produk + Merek Produk + Keterangan Tambahan</string>
    <string name="error_empty_product_name">Nama produk tidak boleh kosong</string>
    <string name="error_product_name_minimum_length">Nama produk minimum 25 karakter</string>
    <string name="error_product_name_contains_emoji">Nama produk tidak boleh menggunakan emoji</string>
    <string name="error_product_name_all_special_character">Nama Produk harus memiliki huruf atau angka</string>
    <string name="error_product_name_exist">Oops, nama produk ini sudah digunakan. Coba cari nama lain, ya!</string>
    <string name="error_product_name_banned">Nama produk tidak bisa digunakan. Coba cari nama lain, ya!</string>
    <string name="error_product_description">Deskripsi produk harus diisi</string>
    <string name="add_product_category_header">Kategori</string>
    <string name="action_choose_other_category">Pilih kategori lainnya</string>
    <string name="title_category_dialog">Kategori tidak bisa diubah</string>
    <string name="immutable_category_message">Kamu tidak bisa ubah kategori untuk produk yang memiliki varian</string>
    <string name="action_close_category_dialog">Tutup</string>
    <string name="message_change_category_title">Yakin mau ubah kategori?</string>
    <string name="message_change_category">Spesifikasi produkmu akan hilang jika kamu mengubah kategori produk ini.</string>
    <string name="action_change_category_positive">Ya, Lanjutkan</string>
    <string name="action_change_category_negative">Batal</string>
    <string name="label_service_fee">Biaya layanan</string>
    <string name="label_category_change">Perubahan kategori</string>
    <string name="content_service_fee_bs">Biaya layanan per produk tergantung pada kategori yang kamu pilih. Jika pemilihan kategori kurang sesuai, maka kategori akan diubah oleh Tokopedia.</string>
    <string name="content_category_change_bs">Kategori yang kamu pilih sebelumnya telah diubah secara otomatis oleh Tokopedia. Pelajari Selengkapnya</string>
    <string name="label_additional_info">Pilih kategori yang sesuai karena biaya layanan akan tergantung pada kategori.</string>
    <string name="text_service_fee_per_sold_product"><![CDATA[Biaya layanan per produk terjual: <b>%s&#37;</b>.\n<a href=link_place_holder>Selengkapnya</a>]]></string>
    <string name="label_no_service_fee"><![CDATA[Bebas biaya layanan untuk 100 transaksi pertama.\n<a href=link_place_holder>Selengkapnya</a>]]></string>
    <string name="add_product_catalog_header">Katalog</string>
    <string name="action_choose_catalog">Pilih</string>
    <string name="add_product_price_header">Harga</string>
    <string name="detail_label_product_price">Harga produk</string>
    <string name="label_add_product_price_tips">Tentukan harga sesuai pasaran produkmu</string>
    <string name="label_prefix_rupiah">Rp </string>
    <string name="action_cancel">Batal</string>
    <string name="error_empty_product_price">Harga produk tidak boleh kosong</string>
    <string name="error_product_price_less_than_min_limit">Harga kurang dari batas min. Rp100</string>
    <string name="label_price_suggestion_range">Kisaran rekomendasi</string>
    <string name="label_price_range">Kisaran harga:</string>
    <string name="price_suggestion_range">%1s - %2s</string>
    <string name="label_check_detail">Lihat Detail</string>
    <string name="label_is_competitive">Sudah kompetitif</string>
    <string name="label_competitive_product_size">%s produk terkompetitif</string>
    <string name="label_best_recommendation">Rekomendasi terbaik:</string>
    <string name="label_price_recommendation">Rekomendasi Harga</string>
    <string name="label_about_price_recommendation">Tentang rekomendasi harga</string>
    <string name="action_apply_price_recommendation">Terapkan</string>
    <string name="label_range_and_recommendation">Kisaran dan Rekomendasi</string>
    <string name="content_range_and_recommendation">Rekomendasi berdasarkan kategori produk dan harga paling kompetitif 1 minggu terakhir.</string>
    <string name="label_most_competitive_product">Produk Terkompetitif</string>
    <string name="content_most_competitive_product">Info harga, ulasan, dan jumlah terjual diperoleh sesuai lamanya produk berikut ini dijual.</string>
    <string name="label_learn_more">Pelajari Selengkapnya</string>
    <string name="label_or">atau</string>
    <string name="label_feedback">Beri Masukan</string>
    <string name="label_sold_product">Terjual %s</string>
    <string name="title_price_recommendation">Rekomendasi Harga Pasar</string>
    <string name="title_price_recommendation_applied">Rekomendasi harga sudah diterapkan</string>
    <string name="title_price_recommendation_bottom_sheet">Rekomendasi harga pasar</string>
    <string name="label_price_recommendation_apply">Terapkan</string>
    <string name="label_price_recommendation_next">Pelajari Selengkapnya</string>
    <string name="text_has_variant_price_ticker">Harga, stok, dan SKU bisa kamu atur di <![CDATA[<b><font color=\'#42b549\'><a href=”###”>halaman varian</a></font></b>]]> karena produk ini punya varian.</string>
    <string name="text_has_variant_price_ticker_mainapp">Download aplikasi Tokopedia Seller untuk mengatur harga, stok, dan SKU varian produk.</string>
    <string name="label_minimum_quantity">Jumlah minimal</string>
    <string name="label_wholesale_price">Harga grosir</string>
    <string name="label_greater_than">></string>
    <string name="add_product_stock_header">Stok</string>
    <string name="label_available_stock">Stok tersedia</string>
    <string name="label_minimum_order">Minimum pemesanan</string>
    <string name="label_sku">SKU (Stock Keeping Unit)</string>
    <string name="label_add_product_sku_tips">Gunakan kode unik SKU jika kamu ingin bisa melacak produk dengan mudah</string>
    <string name="label_video_title">Video</string>
    <string name="label_video_subtitle">Tambah video agar pembeli lebih paham tentang produkmu</string>
    <string name="action_add_video">Tambah video</string>
    <string name="title_shipment_bottom_sheet">Risiko jika pembeli tidak aktifkan\nAsuransi Pengiriman</string>
    <string name="label_shipment_detail">Tentukan detail pengirimanmu</string>
    <string name="label_shipment_description">Pastikan berat produk dan pengiriman sesuai</string>
    <string name="label_shipment_weight_ticker">Perhatikan dengan baik berat produk agar tidak terjadi selisih data dengan pihak kurir.</string>
    <string name="label_shipment_bottom_sheet">Jika terjadi kerusakan / kehilangan saat pengiriman, penjual tidak mendapat pengembalian penuh untuk produk &amp; ongkir, hanya kompensasi senilai <b>maks. 10x ongkir.</b></string>
    <string name="label_weight">Berat</string>
    <string name="label_weight_gram_lowercase">gram</string>
    <string name="action_shipment_dismiss">Mengerti</string>
    <string name="action_variant_save">Simpan</string>
    <string name="label_variant_custom_input_message">Tulis nama varian yang kamu inginkan.</string>
    <string name="content_desc_tv_add_product_photo">text tambah foto</string>
    <string name="content_desc_tfu_product_price">input harga</string>
    <string name="content_desc_tfu_available_stock">input stok</string>
    <string name="content_desc_tfu_minimum_order">input minimum pemesanan</string>
    <string name="content_desc_tfu_sku">input sku</string>
    <string name="content_desc_tf_weight_amount">input berat produkk</string>
    <string name="content_desc_tfu_wholesale_quantity">input jumlah minimal</string>
    <string name="content_desc_tfu_wholesale_price">input harga grosir</string>
    <string name="content_desc_iv_delete_button">button hapus grosir</string>
    <string name="content_desc_textViewAddVideo">text tambah video</string>
    <string name="content_desc_buttonSave">button simpan</string>
    <string name="content_desc_textFieldUnifyCustomValue">input tambah varian</string>
</resources>