<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_product_stock_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product_stock_header"
        android:textColor="@color/Unify_N700"
        android:textSize="@dimen/fontSize_lvl3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tokopedia.unifyprinciples.Typography
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_asterisk"
        android:textColor="@color/Unify_R600_96"
        app:layout_constraintLeft_toRightOf="@id/tv_product_stock_header"
        app:layout_constraintTop_toTopOf="parent"
        app:typographyType="heading_4"
        app:typographyWeight="bold" />

    <com.tokopedia.unifycomponents.TextFieldUnify
        android:id="@+id/tfu_available_stock"
        android:contentDescription="@string/content_desc_tfu_available_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lvl4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_stock_header"
        app:text_field_input_type="number"
        app:text_field_label="@string/label_available_stock"
        app:text_field_label_static="true" />

    <com.tokopedia.unifycomponents.TextFieldUnify
        android:id="@+id/tfu_minimum_order"
        android:contentDescription="@string/content_desc_tfu_minimum_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_lvl2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfu_available_stock"
        app:text_field_input_type="number"
        app:text_field_label="@string/label_minimum_order"
        app:text_field_label_static="true" />

</androidx.constraintlayout.widget.ConstraintLayout>