<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="@dimen/dp_150"
    android:orientation="vertical">

    <com.tokopedia.unifycomponents.TextFieldUnify
        android:id="@+id/textFieldUnifyCustomValue"
        android:contentDescription="@string/content_desc_textFieldUnifyCustomValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:text_field_counter="@integer/max_custom_variant_unit_value_length"
        app:text_field_label="jhfksdjfskdfj"
        app:text_field_message="@string/label_variant_custom_input_message" />

    <com.tokopedia.unifycomponents.UnifyButton
        android:id="@+id/buttonSave"
        android:contentDescription="@string/content_desc_buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/action_variant_save" />

</LinearLayout>