<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout_shipment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.tokopedia.unifyprinciples.Typography
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_shipment_detail"
            android:textColor="@color/Unify_N700_96"
            app:typographyType="heading_4" />

        <com.tokopedia.unifyprinciples.Typography
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_asterisk"
            android:textColor="@color/Unify_R600"
            app:typographyType="heading_4" />

    </LinearLayout>

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_shipment_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_shipment_description"
        android:textColor="@color/Unify_N700_68"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_shipment_title"
        app:typographyType="body_3" />

    <com.tokopedia.unifycomponents.TextFieldUnify
        android:id="@+id/tf_weight_amount"
        android:contentDescription="@string/content_desc_tf_weight_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shipment_subtitle"
        app:text_field_input_type="number"
        app:text_field_label="@string/label_weight"
        app:text_field_append_text="@string/label_weight_gram_lowercase"
        app:text_field_label_static="true" />

    <com.tokopedia.unifycomponents.ticker.Ticker
        android:id="@+id/ticker_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tf_weight_amount"
        app:closeButtonVisibility="gone"
        app:descriptionText="@string/label_shipment_weight_ticker"
        app:tickerShapeType="loose"
        app:tickerType="warning" />

</androidx.constraintlayout.widget.ConstraintLayout>