<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.tokopedia.unifycomponents.TextFieldUnify
        android:id="@+id/tfu_sku"
        android:contentDescription="@string/content_desc_tfu_sku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text_field_label="@string/label_sku"
        app:text_field_message="@string/label_add_product_sku_tips" />

</androidx.constraintlayout.widget.ConstraintLayout>