<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_14"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/su_wholesale">

    <com.tokopedia.unifycomponents.TextFieldUnify
        android:id="@+id/tfu_wholesale_quantity"
        android:contentDescription="@string/content_desc_tfu_wholesale_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_lvl4"
        android:layout_marginRight="@dimen/spacing_lvl4"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tfu_wholesale_price"
        app:layout_constraintTop_toTopOf="parent"
        app:text_field_input_type="number"
        app:text_field_label="@string/label_minimum_quantity"
        app:text_field_label_static="true"
        app:text_field_prepend_text="@string/label_greater_than" />

    <com.tokopedia.unifycomponents.TextFieldUnify
        android:id="@+id/tfu_wholesale_price"
        android:contentDescription="@string/content_desc_tfu_wholesale_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/tfu_wholesale_quantity"
        app:layout_constraintRight_toLeftOf="@id/iv_delete_button"
        app:layout_constraintTop_toTopOf="parent"
        app:text_field_input_type="number"
        app:text_field_label="@string/label_wholesale_price"
        app:text_field_label_static="true" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_delete_button"
        android:contentDescription="@string/content_desc_iv_delete_button"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_marginEnd="@dimen/spacing_lvl1"
        android:layout_marginRight="@dimen/spacing_lvl1"
        android:scaleType="centerInside"
        app:layout_constraintLeft_toRightOf="@id/tfu_wholesale_price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_remove" />

</androidx.constraintlayout.widget.ConstraintLayout>

