<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_product_photo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product_photo_header"
        android:textColor="@color/Unify_N700"
        android:textSize="@dimen/fontSize_lvl3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tokopedia.unifyprinciples.Typography
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_asterisk"
        android:textColor="@color/Unify_R600_96"
        app:layout_constraintLeft_toRightOf="@id/tv_product_photo_header"
        app:layout_constraintTop_toTopOf="parent"
        app:typographyType="heading_4"
        app:typographyWeight="bold" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_add_product_photo"
        android:contentDescription="@string/content_desc_tv_add_product_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_product_photo"
        android:textColor="@color/Unify_G500"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:typographyType="body_2"
        app:typographyWeight="reguler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        app:layout_constraintTop_toBottomOf="@id/tv_product_photo_header" />

</androidx.constraintlayout.widget.ConstraintLayout>