<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tvVideoHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_video_title"
        android:textColor="@color/Unify_N700_96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:typographyType="heading_4" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tvVideoHeaderSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/label_video_subtitle"
        android:textColor="@color/Unify_N700_68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVideoHeaderTitle"
        app:typographyType="body_2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lvl4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVideoHeaderSubtitle" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/textViewAddVideo"
        android:contentDescription="@string/content_desc_textViewAddVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_video"
        android:textColor="@color/Unify_G500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view"
        app:typographyType="body_2" />

</androidx.constraintlayout.widget.ConstraintLayout>