<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tpg_range_and_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_range_and_recommendation"
        android:textColor="@color/Unify_NN950"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:typographyType="display_3"
        app:typographyWeight="bold" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tpg_range_and_recommendation_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/content_range_and_recommendation"
        android:textColor="@color/Unify_NN600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tpg_range_and_recommendation"
        app:typographyType="small" />

    <com.tokopedia.unifycomponents.DividerUnify
        android:id="@+id/du_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tpg_range_and_recommendation_desc" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tpg_most_competitive_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_most_competitive_product"
        android:textColor="@color/Unify_NN950"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/du_top"
        app:typographyType="display_3"
        app:typographyWeight="bold" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tpg_most_competitive_product_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/content_most_competitive_product"
        android:textColor="@color/Unify_NN600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tpg_most_competitive_product"
        app:typographyType="small" />

    <com.tokopedia.unifycomponents.DividerUnify
        android:id="@+id/du_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tpg_most_competitive_product_desc" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tpg_cta_learn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="22dp"
        android:text="@string/label_learn_more"
        android:textColor="@color/Unify_GN500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/du_bottom"
        app:typographyType="paragraph_3"
        app:typographyWeight="bold" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tpg_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_or"
        android:textColor="@color/Unify_NN600"
        app:layout_constraintBottom_toBottomOf="@id/tpg_cta_learn_more"
        app:layout_constraintStart_toEndOf="@id/tpg_cta_learn_more"
        app:layout_constraintTop_toTopOf="@id/tpg_cta_learn_more"
        app:typographyType="small" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tpg_cta_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_feedback"
        android:textColor="@color/Unify_GN500"
        app:layout_constraintStart_toEndOf="@id/tpg_or"
        app:layout_constraintTop_toTopOf="@id/tpg_cta_learn_more"
        app:typographyType="paragraph_3"
        app:typographyWeight="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>