<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_shipment_bottom_sheet"
        android:textColor="@color/Unify_N700"
        android:textAlignment="center"
        app:typographyType="heading_2"
        app:typographyWeight="bold" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lvl4"
        android:text="@string/label_shipment_bottom_sheet"
        android:textColor="@color/Unify_N700"
        android:textAlignment="textStart"
        app:typographyType="body_2"/>

    <com.tokopedia.unifycomponents.UnifyButton
        android:id="@+id/btn_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lvl5"
        android:layout_marginBottom="@dimen/spacing_lvl4"
        android:text="@string/action_shipment_dismiss"/>

</LinearLayout>